--- a/javacs-lab12/build.xml
+++ b/javacs-lab12/build.xml
@@ -400,6 +400,12 @@
             <classpath refid="JavaCS.classpath"/>
         </java>
     </target>
+    <target name="Search">
+        <java classname="com.flatironschool.javacs.Search" failonerror="true" fork="yes">
+            <env key="REDISTOGO_AUTH" value="2979811b19fe8895c14425ed5e694107"/>
+            <classpath refid="JavaCS.classpath"/>
+        </java>
+    </target>
     <target name="MyArrayListSoln">
         <java classname="com.flatironschool.javacs.MyArrayListSoln" failonerror="true" fork="yes">
             <classpath refid="JavaCS.classpath"/>
