--- a/codeu-final/war/WEB-INF/web.xml
+++ b/codeu-final/war/WEB-INF/web.xml
@@ -6,13 +6,19 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet>
 		<servlet-name>Codeu_final</servlet-name>
-		<servlet-class>com.sleepdeptsearch.mywebapp.Codeu_finalServlet</servlet-class>
+		<servlet-class>com.sleepdeptsearch.Codeu_finalServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Codeu_final</servlet-name>
-		<url-pattern>/codeu_final</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-	</welcome-file-list>
+	
+	<servlet>
+		<servlet-name>Searched</servlet-name>
+		<servlet-class>com.sleepdeptsearch.Searched</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Searched</servlet-name>
+		<url-pattern>/searched</url-pattern>
+	</servlet-mapping>
 </web-app>
